--- a/themes/ethreecustom/custom-sass/style.scss
+++ b/themes/ethreecustom/custom-sass/style.scss
@@ -2,9 +2,36 @@
 @import '../bootstrap-sass/bootstrap.scss';
 
 /** Overrides **/
+.navbar-default {
+  background-color: #FFF;
+  border-color: #FFF;
+ }
+
+.navbar-nav {
+    // border-top: 28px solid #15cadb;
+    float: right;
+    li {
+        a {
+            text-transform: uppercase;
+            font-size: 18px;
+        }
+    }
+}
+
 .navbar .logo img {
     width: 40%;
     height: auto;
+}
+
+.block-views-blockheader-top-events-block-1,
+.block-views-blockfeatured-events-block-1,
+.view-display-id-page_1 {
+    padding: 0 30px;
+    margin: 40px 0;
+}
+
+.header-top-content {
+    padding-top: 100px;
 }
 
 .header-top-title,
@@ -27,6 +54,7 @@
             background-color: #f41361;
             color: #FFF;
             padding: 8px;
+            text-transform: uppercase;
         }
     }
 }
@@ -49,12 +77,29 @@
         color: #15cadb;
     }
     .content-link {
-        border-top: 4px solid red;
-        padding-top: 8px;
+        .divider {
+            border-top: 4px solid red;
+            padding-top: 8px;
+            width: 90px;
+        }
         a {
             color: #f41361;
         }
     }
+}
+
+.content-link-wrapper {
+    padding-top: 8px;
+}
+
+.header-top-image:after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 14px;
+    border-bottom: 326px solid white;
+    border-right: 151px solid transparent;
 }
 
 .upcoming-event-date:after  {
@@ -67,12 +112,39 @@
     border-left: 100px solid transparent
 }
 
-.upcoming-even-image:after {
+.upcoming-event-image:after {
     content: '';
     display: block;
     position: absolute;
-    bottom: 183px;
+    bottom: 196px;
     right: 0;
     border-bottom: 99px solid white;
     border-right: 365px solid transparent
+}
+
+.content-link a:before {
+    -ms-transform: skew(-15deg, 0deg); /* IE 9 */
+    -webkit-transform: skew(-15deg, 0deg); /* Safari */
+    transform: skew(-15deg, 0deg); /* Standard syntax */
+}
+
+.navbar-nav:before {
+    content: '';
+    display: block;
+    border-top: 40px solid #15cadb;
+    border-left: 30px solid transparent
+}
+
+.content-link-wrapper a:before {
+    content: '';
+    background: #f41361;
+    position: absolute;
+    height: 20%;
+    width: 23%;
+    left: 9px;
+    top: 183px;
+    border: 3px solid transparent;
+    z-index: -1;
+    -webkit-transform: skew(-15deg, 0deg) translate3d(0, 0, 0);
+    transform: skew(-15deg, 0deg) translate3d(0, 0, 0);
 }
